<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#003366"
    tools:context=".login_screen">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#bfdfdf" />

    <View
        android:id="@+id/view1"
        android:layout_width="300sp"
        android:layout_height="1px"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65sp"
        android:background="#495669" />
    <View
        android:layout_width="300sp"
        android:layout_height="1px"
        android:background="#495669"
        android:id="@+id/view2"
        android:layout_below="@+id/view1"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignStart="@+id/view1"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/view3"
        android:layout_width="300sp"
        android:layout_height="1px"
        android:layout_below="@+id/view2"
        android:layout_alignStart="@+id/view2"
        android:layout_alignLeft="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#495669" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:layout_alignStart="@+id/view1"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignBottom="@+id/editTextEmail"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/user_32px" />

    <ImageView
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:id="@+id/imageView4"
        android:src="@drawable/lock_32px"
        android:layout_below="@+id/view2"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_marginTop="14dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/email"
        android:textColor="#898A83"
        android:textColorHint="#898A83" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#898A83"
        android:textColorHint="#898A83" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_below="@+id/view3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_back"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#bfdfdf"
        android:textSize="15sp" />



    <TextView
        android:id="@+id/textViewforgotpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="forgotpw"
        android:text="@string/forgotpassword"
        android:textColor="#898A83"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewforgotpw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="goToRegister"
        android:text="@string/register"
        android:textColor="#898A83"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/changelanguage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginStart="-65dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textView1"
        app:srcCompat="@drawable/language" />


</RelativeLayout>