<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".action_screen">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map_actionScreen"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.project.womensecurityapp.MapActivity" />

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/white_border"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/policeStationBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/police_float" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/police"
                        android:textColor="@color/Black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/railwayStationBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/train_float" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/railway"
                        android:textColor="@color/Black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/AirportBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/airport_float" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/airport"
                        android:textColor="@color/Black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/MallBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/mall_float" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/hospital"
                        android:textColor="@color/Black" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/action_screen_gps_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/relLayout1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_gps" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="10dp">

        <Button
            android:id="@+id/alertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/blue_semi_transparent_pressed"
            android:onClick="back"
            android:textStyle="bold"
            android:text="@string/Back" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/alertButton"
            android:layout_marginBottom="0dp" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>


